Versión 4 - con lcd para moostrar puntaje

--- a/Juego/mainwindow.ui
+++ b/Juego/mainwindow.ui
@@ -96,19 +96,6 @@
      <set>QGraphicsView::DontAdjustForAntialiasing|QGraphicsView::DontClipPainter|QGraphicsView::DontSavePainterState|QGraphicsView::IndirectPainting</set>
     </property>
    </widget>
-   <widget class="QProgressBar" name="vida">
-    <property name="geometry">
-     <rect>
-      <x>270</x>
-      <y>250</y>
-      <width>118</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="value">
-     <number>100</number>
-    </property>
-   </widget>
    <widget class="QPushButton" name="reiniciar">
     <property name="geometry">
      <rect>
@@ -120,6 +107,16 @@
     </property>
     <property name="text">
      <string>Reiniciar</string>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="lcdNumber">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>250</y>
+      <width>64</width>
+      <height>23</height>
+     </rect>
     </property>
    </widget>
   </widget>
