--- a/Juego/mainwindow.ui
+++ b/Juego/mainwindow.ui
@@ -64,7 +64,7 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>110</x>
       <y>250</y>
       <width>61</width>
       <height>21</height>
@@ -112,7 +112,7 @@
    <widget class="QLCDNumber" name="lcdNumber">
     <property name="geometry">
      <rect>
-      <x>340</x>
+      <x>210</x>
       <y>250</y>
       <width>64</width>
       <height>23</height>
@@ -143,6 +143,16 @@
     </property>
     <property name="text">
      <string>SALIR</string>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="lcdNumber_2">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>250</y>
+      <width>64</width>
+      <height>23</height>
+     </rect>
     </property>
    </widget>
   </widget>
