--- a/Juego/mainwindow.ui
+++ b/Juego/mainwindow.ui
@@ -64,14 +64,14 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>250</y>
+      <x>20</x>
+      <y>0</y>
       <width>61</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>¡Disparar!</string>
+     <string>RUN</string>
     </property>
    </widget>
    <widget class="QGraphicsView" name="graphicsView">
@@ -155,6 +155,15 @@
      </rect>
     </property>
    </widget>
+   <zorder>graphicsView</zorder>
+   <zorder>potencia</zorder>
+   <zorder>angulo</zorder>
+   <zorder>pushButton</zorder>
+   <zorder>reiniciar</zorder>
+   <zorder>lcdNumber</zorder>
+   <zorder>pushButton_2</zorder>
+   <zorder>pushButton_3</zorder>
+   <zorder>lcdNumber_2</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
