--- a/Juego/mainwindow.ui
+++ b/Juego/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>591</width>
-    <height>354</height>
+    <width>601</width>
+    <height>447</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -64,8 +64,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>0</y>
+      <x>50</x>
+      <y>260</y>
       <width>61</width>
       <height>21</height>
      </rect>
@@ -99,8 +99,8 @@
    <widget class="QPushButton" name="reiniciar">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>240</y>
+      <x>590</x>
+      <y>220</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -112,8 +112,8 @@
    <widget class="QLCDNumber" name="lcdNumber">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>270</y>
+      <x>190</x>
+      <y>290</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -122,21 +122,21 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>70</y>
+      <x>320</x>
+      <y>140</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>JUGAR</string>
+     <string>PLAY</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>130</y>
+      <x>230</x>
+      <y>140</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -148,8 +148,8 @@
    <widget class="QLCDNumber" name="lcdNumber_2">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>270</y>
+      <x>120</x>
+      <y>290</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -158,21 +158,21 @@
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>130</y>
+      <x>140</x>
+      <y>140</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>REGISTRO</string>
+     <string>USER</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>70</y>
+      <x>230</x>
+      <y>80</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -184,8 +184,8 @@
    <widget class="QPushButton" name="pushButton_6">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>130</y>
+      <x>230</x>
+      <y>110</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -197,8 +197,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>250</y>
+      <x>130</x>
+      <y>260</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -210,8 +210,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>250</y>
+      <x>200</x>
+      <y>260</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -223,10 +223,10 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>250</y>
-      <width>47</width>
-      <height>13</height>
+      <x>270</x>
+      <y>260</y>
+      <width>41</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -236,8 +236,8 @@
    <widget class="QLCDNumber" name="lcdNumber_3">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>270</y>
+      <x>260</x>
+      <y>290</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -246,8 +246,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>250</y>
+      <x>0</x>
+      <y>300</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -259,8 +259,8 @@
    <widget class="QLabel" name="labelnombre">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>280</y>
+      <x>60</x>
+      <y>300</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -272,11 +272,175 @@
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>70</y>
+      <x>120</x>
+      <y>110</y>
       <width>113</width>
       <height>20</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="REGISTRARVS">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>170</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>USERS</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="disparovs">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>260</y>
+      <width>61</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>RUN</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_2JUGADOR1">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>40</y>
+      <width>113</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_3JUGADOR2">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>40</y>
+      <width>113</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5JUGADOR1">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>20</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PLAYER 1</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6JUGADOR2">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>20</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PLAYER 2</string>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="contavs">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>290</y>
+      <width>64</width>
+      <height>23</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="lcdNumber_4puntaje1">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>350</y>
+      <width>64</width>
+      <height>23</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="contanivel">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>290</y>
+      <width>64</width>
+      <height>23</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="lcdNumber_5puntaj2">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>350</y>
+      <width>64</width>
+      <height>23</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>260</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>DISPAROS</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>260</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>LEVEL</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>320</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PUNTAJE PLAYER 2</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>310</y>
+      <width>111</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PUNTAJE PLAYER 1</string>
     </property>
    </widget>
    <zorder>graphicsView</zorder>
@@ -298,13 +462,27 @@
    <zorder>label_4</zorder>
    <zorder>labelnombre</zorder>
    <zorder>lineEdit</zorder>
+   <zorder>REGISTRARVS</zorder>
+   <zorder>disparovs</zorder>
+   <zorder>lineEdit_2JUGADOR1</zorder>
+   <zorder>lineEdit_3JUGADOR2</zorder>
+   <zorder>label_5JUGADOR1</zorder>
+   <zorder>label_6JUGADOR2</zorder>
+   <zorder>contavs</zorder>
+   <zorder>lcdNumber_4puntaje1</zorder>
+   <zorder>contanivel</zorder>
+   <zorder>lcdNumber_5puntaj2</zorder>
+   <zorder>label_5</zorder>
+   <zorder>label_6</zorder>
+   <zorder>label_7</zorder>
+   <zorder>label_8</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>591</width>
+     <width>601</width>
      <height>21</height>
     </rect>
    </property>
