--- a/Juego/mainwindow.ui
+++ b/Juego/mainwindow.ui
@@ -64,8 +64,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>260</y>
+      <x>190</x>
+      <y>250</y>
       <width>61</width>
       <height>21</height>
      </rect>
@@ -79,7 +79,7 @@
      <rect>
       <x>20</x>
       <y>0</y>
-      <width>571</width>
+      <width>601</width>
       <height>241</height>
      </rect>
     </property>
@@ -96,24 +96,11 @@
      <set>QGraphicsView::DontAdjustForAntialiasing|QGraphicsView::DontClipPainter|QGraphicsView::DontSavePainterState|QGraphicsView::IndirectPainting</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="reiniciar">
-    <property name="geometry">
-     <rect>
-      <x>590</x>
-      <y>220</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Reiniciar</string>
-    </property>
-   </widget>
    <widget class="QLCDNumber" name="lcdNumber">
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>290</y>
+      <y>310</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -122,8 +109,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>140</y>
+      <x>280</x>
+      <y>70</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -135,8 +122,8 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>140</y>
+      <x>280</x>
+      <y>160</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -148,8 +135,8 @@
    <widget class="QLCDNumber" name="lcdNumber_2">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>290</y>
+      <x>110</x>
+      <y>310</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -159,7 +146,7 @@
     <property name="geometry">
      <rect>
       <x>140</x>
-      <y>140</y>
+      <y>130</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -171,8 +158,8 @@
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>80</y>
+      <x>280</x>
+      <y>100</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -184,8 +171,8 @@
    <widget class="QPushButton" name="pushButton_6">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>110</y>
+      <x>280</x>
+      <y>130</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -197,8 +184,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>260</y>
+      <x>120</x>
+      <y>290</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -211,7 +198,7 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>260</y>
+      <y>290</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -223,8 +210,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>260</y>
+      <x>280</x>
+      <y>290</y>
       <width>41</width>
       <height>16</height>
      </rect>
@@ -236,8 +223,8 @@
    <widget class="QLCDNumber" name="lcdNumber_3">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>290</y>
+      <x>270</x>
+      <y>310</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -246,8 +233,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>300</y>
+      <x>30</x>
+      <y>290</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -259,8 +246,8 @@
    <widget class="QLabel" name="labelnombre">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>300</y>
+      <x>30</x>
+      <y>310</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -273,7 +260,7 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>110</y>
+      <y>100</y>
       <width>113</width>
       <height>20</height>
      </rect>
@@ -282,8 +269,8 @@
    <widget class="QPushButton" name="REGISTRARVS">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>170</y>
+      <x>280</x>
+      <y>190</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -295,8 +282,8 @@
    <widget class="QPushButton" name="disparovs">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>260</y>
+      <x>360</x>
+      <y>280</y>
       <width>61</width>
       <height>21</height>
      </rect>
@@ -308,7 +295,7 @@
    <widget class="QLineEdit" name="lineEdit_2JUGADOR1">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>200</x>
       <y>40</y>
       <width>113</width>
       <height>20</height>
@@ -318,7 +305,7 @@
    <widget class="QLineEdit" name="lineEdit_3JUGADOR2">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>330</x>
       <y>40</y>
       <width>113</width>
       <height>20</height>
@@ -328,7 +315,7 @@
    <widget class="QLabel" name="label_5JUGADOR1">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>240</x>
       <y>20</y>
       <width>47</width>
       <height>13</height>
@@ -341,7 +328,7 @@
    <widget class="QLabel" name="label_6JUGADOR2">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>370</x>
       <y>20</y>
       <width>47</width>
       <height>13</height>
@@ -354,8 +341,8 @@
    <widget class="QLCDNumber" name="contavs">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>290</y>
+      <x>360</x>
+      <y>310</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -364,8 +351,8 @@
    <widget class="QLCDNumber" name="lcdNumber_4puntaje1">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>350</y>
+      <x>510</x>
+      <y>310</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -374,8 +361,8 @@
    <widget class="QLCDNumber" name="contanivel">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>290</y>
+      <x>360</x>
+      <y>350</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -384,7 +371,7 @@
    <widget class="QLCDNumber" name="lcdNumber_5puntaj2">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>510</x>
       <y>350</y>
       <width>64</width>
       <height>23</height>
@@ -394,60 +381,111 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>260</y>
+      <x>450</x>
+      <y>310</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PLAYER 1</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>350</y>
       <width>51</width>
       <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PLAYER 2</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>300</y>
+      <width>101</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
      <string>DISPAROS</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>540</x>
-      <y>260</y>
-      <width>51</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>LEVEL</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_7">
-    <property name="geometry">
-     <rect>
-      <x>500</x>
-      <y>320</y>
-      <width>111</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PUNTAJE PLAYER 2</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>310</y>
-      <width>111</width>
-      <height>51</height>
+      <x>520</x>
+      <y>260</y>
+      <width>61</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
-     <string>PUNTAJE PLAYER 1</string>
+     <string>PUNTAJES</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_7">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>350</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>GUARDAR</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_8">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>350</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>CARGAR</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="reiniciar">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>240</y>
+      <width>91</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>FUERA DE USO</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>350</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>NIVEL</string>
     </property>
    </widget>
    <zorder>graphicsView</zorder>
    <zorder>potencia</zorder>
    <zorder>angulo</zorder>
    <zorder>pushButton</zorder>
-   <zorder>reiniciar</zorder>
    <zorder>lcdNumber</zorder>
    <zorder>pushButton_2</zorder>
    <zorder>pushButton_3</zorder>
@@ -476,6 +514,10 @@
    <zorder>label_6</zorder>
    <zorder>label_7</zorder>
    <zorder>label_8</zorder>
+   <zorder>pushButton_7</zorder>
+   <zorder>pushButton_8</zorder>
+   <zorder>reiniciar</zorder>
+   <zorder>label_9</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
