--- a/Juego/mainwindow.ui
+++ b/Juego/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>667</width>
-    <height>434</height>
+    <height>424</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -29,8 +29,8 @@
    <widget class="QSlider" name="potencia">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>300</y>
+      <x>90</x>
+      <y>290</y>
       <width>71</width>
       <height>22</height>
      </rect>
@@ -45,8 +45,8 @@
    <widget class="QSlider" name="angulo">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>230</y>
+      <x>60</x>
+      <y>220</y>
       <width>22</width>
       <height>61</height>
      </rect>
@@ -87,9 +87,9 @@
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>90</x>
       <y>0</y>
-      <width>601</width>
+      <width>491</width>
       <height>281</height>
      </rect>
     </property>
@@ -119,8 +119,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>250</y>
+      <x>300</x>
+      <y>170</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -251,7 +251,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>DISPAROS</string>
+     <string>&lt;font color=white&gt;DISPAROS</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
@@ -264,7 +264,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PUNTAJE</string>
+     <string>&lt;font color=white&gt;PUNTAJE</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
@@ -277,7 +277,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>MUNDO</string>
+     <string>&lt;font color=white&gt;MUNDO</string>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcdNumber_3">
@@ -293,27 +293,27 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>60</x>
       <y>330</y>
       <width>47</width>
       <height>13</height>
      </rect>
     </property>
     <property name="text">
-     <string>USUARIO</string>
+     <string>&lt;font color=white&gt;USUARIO</string>
     </property>
    </widget>
    <widget class="QLabel" name="labelnombre">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>360</y>
+      <x>60</x>
+      <y>350</y>
       <width>47</width>
       <height>13</height>
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>&lt;font color=white&gt;TextLabel</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit">
@@ -352,7 +352,7 @@
    <widget class="QPushButton" name="disparovs">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>170</x>
       <y>290</y>
       <width>61</width>
       <height>31</height>
@@ -376,7 +376,7 @@
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>110</y>
+      <y>170</y>
       <width>113</width>
       <height>20</height>
      </rect>
@@ -386,7 +386,7 @@
     <property name="geometry">
      <rect>
       <x>350</x>
-      <y>110</y>
+      <y>170</y>
       <width>113</width>
       <height>20</height>
      </rect>
@@ -396,26 +396,26 @@
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>90</y>
+      <y>150</y>
       <width>47</width>
       <height>13</height>
      </rect>
     </property>
     <property name="text">
-     <string>PLAYER 1</string>
+     <string>&lt;font color=white&gt;PLAYER 1</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_6JUGADOR2">
     <property name="geometry">
      <rect>
       <x>390</x>
-      <y>90</y>
+      <y>150</y>
       <width>47</width>
       <height>13</height>
      </rect>
     </property>
     <property name="text">
-     <string>PLAYER 2</string>
+     <string>&lt;font color=white&gt;PLAYER 2</string>
     </property>
    </widget>
    <widget class="QLCDNumber" name="contavs">
@@ -468,7 +468,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PLAYER 1</string>
+     <string>&lt;font color=white&gt;PLAYER 1</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_6">
@@ -481,20 +481,20 @@
      </rect>
     </property>
     <property name="text">
-     <string>PLAYER 2</string>
+     <string>&lt;font color=white&gt;PLAYER 2</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>300</x>
       <y>300</y>
       <width>101</width>
       <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>DISPAROS</string>
+     <string>&lt;font color=white&gt;DISPAROS</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_8">
@@ -507,7 +507,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PUNTAJES</string>
+     <string>&lt;font color=white&gt;PUNTAJES</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_7">
@@ -559,14 +559,14 @@
    <widget class="QPushButton" name="reiniciar">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>240</y>
-      <width>91</width>
+      <x>590</x>
+      <y>10</y>
+      <width>71</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>FUERA DE USO</string>
+     <string>REINICIAR</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_9">
@@ -582,13 +582,13 @@
      <string>NIVEL</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_fondo">
+   <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>-8</y>
+      <x>-10</x>
+      <y>-30</y>
       <width>661</width>
-      <height>391</height>
+      <height>411</height>
      </rect>
     </property>
     <property name="text">
@@ -601,7 +601,167 @@
      <bool>true</bool>
     </property>
    </widget>
-   <zorder>label_fondo</zorder>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>430</x>
+      <y>320</y>
+      <width>181</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_14">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>290</y>
+      <width>111</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="imagenes.qrc">:/imagenes/logoard.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>220</y>
+      <width>31</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_13">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>310</y>
+      <width>41</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_15">
+    <property name="geometry">
+     <rect>
+      <x>-40</x>
+      <y>-170</y>
+      <width>671</width>
+      <height>381</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="imagenes.qrc">:/imagenes/instrucciones.jpeg</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_9">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>340</y>
+      <width>31</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/imagenes/INSTRUCCIONES.PNG</normaloff>:/imagenes/INSTRUCCIONES.PNG</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>30</width>
+      <height>28</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_10">
+    <property name="geometry">
+     <rect>
+      <x>620</x>
+      <y>340</y>
+      <width>31</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/imagenes/atrasestese.png</normaloff>:/imagenes/atrasestese.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>30</width>
+      <height>28</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="mutear">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>31</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/imagenes/mutear.PNG</normaloff>:/imagenes/mutear.PNG</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>34</width>
+      <height>60</height>
+     </size>
+    </property>
+   </widget>
+   <zorder>label_10</zorder>
    <zorder>graphicsView</zorder>
    <zorder>potencia</zorder>
    <zorder>angulo</zorder>
@@ -636,8 +796,16 @@
    <zorder>label_8</zorder>
    <zorder>pushButton_7</zorder>
    <zorder>pushButton_8</zorder>
-   <zorder>reiniciar</zorder>
    <zorder>label_9</zorder>
+   <zorder>label_11</zorder>
+   <zorder>label_14</zorder>
+   <zorder>label_15</zorder>
+   <zorder>pushButton_9</zorder>
+   <zorder>pushButton_10</zorder>
+   <zorder>mutear</zorder>
+   <zorder>reiniciar</zorder>
+   <zorder>label_13</zorder>
+   <zorder>label_12</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
